--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
+  "homepage": "https://vee309bajracharya.github.io/newsletter-form",
   "name": "newsletter-form",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "formik": "^2.4.6",
+    "gh-pages": "^6.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
